[dotnet-plugin] Mockk/ByteBuddy dependencies fix, jvmArgs added to run on 9+, code format